--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Notion HQ Widgets</title>
+  <title>Notion HQ</title>
   <style>
     :root{
       --bg0:#0b0d0c;
@@ -19,28 +19,6 @@
       --panel-border: 1px solid rgba(255,255,255,.06);
       --card-bg: rgba(0,0,0,.25);
       --card-border: 1px solid rgba(255,255,255,.06);
-
-      /* Goals base */
-      --goals-gap: 14px;
-      --goals-col-radius: 16px;
-      --goals-card-radius: 14px;
-
-      /* Notion-like column colors */
-      --na-bg: rgba(255,255,255,.04);
-      --na-border: rgba(255,255,255,.08);
-      --na-accent: rgba(180, 190, 195, .95);
-
-      --pl-bg: rgba(80, 145, 255, .13);
-      --pl-border: rgba(80, 145, 255, .25);
-      --pl-accent: rgba(120, 170, 255, .95);
-
-      --ip-bg: rgba(230, 180, 70, .13);
-      --ip-border: rgba(230, 180, 70, .25);
-      --ip-accent: rgba(245, 200, 90, .95);
-
-      --dn-bg: rgba(60, 190, 120, .13);
-      --dn-border: rgba(60, 190, 120, .25);
-      --dn-accent: rgba(110, 220, 160, .95);
     }
 
     *{ box-sizing:border-box; }
@@ -345,269 +323,6 @@
       letter-spacing:.2px;
       color: #cfe0da;
     }
-
-    /* ===== Goals Section ===== */
-    .section{
-      margin-top: 18px;
-    }
-
-    .section-title{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap: 14px;
-      margin: 18px 0 10px;
-      padding-top: 14px;
-      border-top: 1px solid rgba(255,255,255,.10);
-    }
-
-    .section-title h2{
-      margin:0;
-      font-size: 18px;
-      font-weight: 950;
-      letter-spacing:.2px;
-      display:flex;
-      align-items:center;
-      gap: 10px;
-    }
-
-    .section-title .meta{
-      color: rgba(154,167,163,.95);
-      font-size: 12px;
-      font-weight: 750;
-    }
-
-    .goals-board{
-      display:grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: var(--goals-gap);
-    }
-
-    @media (max-width: 980px){
-      .goals-board{ grid-template-columns: repeat(2, 1fr); }
-    }
-    @media (max-width: 520px){
-      .goals-board{ grid-template-columns: 1fr; }
-    }
-
-    /* Column base */
-    .g-col{
-      border-radius: var(--goals-col-radius);
-      padding: 12px;
-      box-shadow: 0 10px 26px rgba(0,0,0,.26);
-      min-height: 180px;
-      border: 1px solid rgba(255,255,255,.08);
-      background: rgba(0,0,0,.12);
-      position: relative;
-      overflow: hidden;
-    }
-
-    /* Notion-like column color variants via data attribute */
-    .g-col[data-col="not_active"]{
-      background: linear-gradient(180deg, var(--na-bg), rgba(0,0,0,.16));
-      border-color: var(--na-border);
-    }
-    .g-col[data-col="planned"]{
-      background: linear-gradient(180deg, var(--pl-bg), rgba(0,0,0,.16));
-      border-color: var(--pl-border);
-    }
-    .g-col[data-col="in_progress"]{
-      background: linear-gradient(180deg, var(--ip-bg), rgba(0,0,0,.16));
-      border-color: var(--ip-border);
-    }
-    .g-col[data-col="done"]{
-      background: linear-gradient(180deg, var(--dn-bg), rgba(0,0,0,.16));
-      border-color: var(--dn-border);
-    }
-
-    /* soft glow */
-    .g-col::after{
-      content:"";
-      position:absolute;
-      inset:-40% -20% auto -20%;
-      height: 65%;
-      background: radial-gradient(circle at 50% 50%, rgba(255,255,255,.08), rgba(255,255,255,0) 60%);
-      opacity:.35;
-      pointer-events:none;
-    }
-
-    .g-colhead{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap: 10px;
-      margin-bottom: 10px;
-      position: relative;
-      z-index: 1;
-    }
-
-    .g-pill{
-      display:inline-flex;
-      align-items:center;
-      gap: 8px;
-      padding: 4px 10px;
-      border-radius: 999px;
-      border: 1px solid rgba(255,255,255,.12);
-      background: rgba(0,0,0,.18);
-      font-size: 12px;
-      font-weight: 950;
-      letter-spacing:.2px;
-      color: rgba(232,242,238,.94);
-      text-transform: none;
-    }
-
-    .g-count{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      min-width: 26px;
-      height: 22px;
-      padding: 0 8px;
-      border-radius: 999px;
-      font-size: 12px;
-      font-weight: 950;
-      border: 1px solid rgba(255,255,255,.12);
-      background: rgba(0,0,0,.18);
-      color: rgba(232,242,238,.90);
-    }
-
-    /* header accents by column id */
-    .g-col[data-col="not_active"] .g-pill,
-    .g-col[data-col="not_active"] .g-count{
-      border-color: rgba(180,190,195,.35);
-    }
-    .g-col[data-col="planned"] .g-pill,
-    .g-col[data-col="planned"] .g-count{
-      border-color: rgba(120,170,255,.40);
-    }
-    .g-col[data-col="in_progress"] .g-pill,
-    .g-col[data-col="in_progress"] .g-count{
-      border-color: rgba(245,200,90,.40);
-    }
-    .g-col[data-col="done"] .g-pill,
-    .g-col[data-col="done"] .g-count{
-      border-color: rgba(110,220,160,.40);
-    }
-
-    .g-list{
-      display:flex;
-      flex-direction:column;
-      gap: 10px;
-      position: relative;
-      z-index: 1;
-    }
-
-    .g-card{
-      border-radius: var(--goals-card-radius);
-      padding: 10px 10px 9px;
-      border: 1px solid rgba(255,255,255,.10);
-      background: rgba(0,0,0,.14);
-      box-shadow: inset 0 0 0 1px rgba(255,255,255,.03);
-    }
-
-    /* Card tint by column (subtle but Notion-like) */
-    .g-col[data-col="planned"] .g-card{
-      background: rgba(80,145,255,.10);
-      border-color: rgba(80,145,255,.18);
-    }
-    .g-col[data-col="in_progress"] .g-card{
-      background: rgba(230,180,70,.10);
-      border-color: rgba(230,180,70,.18);
-    }
-    .g-col[data-col="done"] .g-card{
-      background: rgba(60,190,120,.10);
-      border-color: rgba(60,190,120,.18);
-    }
-    .g-col[data-col="not_active"] .g-card{
-      background: rgba(255,255,255,.04);
-      border-color: rgba(255,255,255,.10);
-    }
-
-    .g-row{
-      display:flex;
-      align-items:flex-start;
-      justify-content:space-between;
-      gap: 10px;
-    }
-
-    .g-title{
-      font-size: 13px;
-      font-weight: 950;
-      line-height: 1.25;
-      color: rgba(232,242,238,.94);
-      display:flex;
-      gap: 8px;
-      align-items:flex-start;
-    }
-
-    .g-emoji{ width: 18px; text-align:center; }
-
-    .g-meta{
-      color: rgba(232,242,238,.78);
-      font-size: 12px;
-      font-weight: 900;
-      white-space: nowrap;
-      margin-top: 1px;
-      opacity: .95;
-    }
-
-    .g-progress{
-      margin-top: 8px;
-      height: 8px;
-      border-radius: 999px;
-      background: rgba(0,0,0,.22);
-      border: 1px solid rgba(255,255,255,.10);
-      overflow:hidden;
-    }
-
-    .g-progress > div{
-      height: 100%;
-      width: 0%;
-      background: linear-gradient(90deg, rgba(168,240,179,.92), rgba(120,217,138,.92));
-      box-shadow: 0 0 18px rgba(168,240,179,.12);
-    }
-
-    /* progress tint per column */
-    .g-col[data-col="not_active"] .g-progress > div{
-      background: linear-gradient(90deg, rgba(180,190,195,.85), rgba(210,220,225,.75));
-      box-shadow: 0 0 16px rgba(180,190,195,.10);
-    }
-    .g-col[data-col="planned"] .g-progress > div{
-      background: linear-gradient(90deg, rgba(120,170,255,.90), rgba(80,145,255,.85));
-      box-shadow: 0 0 16px rgba(120,170,255,.12);
-    }
-    .g-col[data-col="in_progress"] .g-progress > div{
-      background: linear-gradient(90deg, rgba(245,200,90,.92), rgba(230,180,70,.85));
-      box-shadow: 0 0 16px rgba(245,200,90,.12);
-    }
-    .g-col[data-col="done"] .g-progress > div{
-      background: linear-gradient(90deg, rgba(110,220,160,.92), rgba(60,190,120,.85));
-      box-shadow: 0 0 16px rgba(110,220,160,.12);
-    }
-
-    .g-foot{
-      margin-top: 10px;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap: 10px;
-      color: rgba(232,242,238,.78);
-      font-size: 11px;
-      font-weight: 900;
-      opacity: .95;
-    }
-
-    .error{
-      margin-top: 10px;
-      padding: 10px 12px;
-      border-radius: 14px;
-      border: 1px solid rgba(255,80,80,.25);
-      background: rgba(255,80,80,.06);
-      color: rgba(232,242,238,.90);
-      font-size: 12px;
-      font-weight: 750;
-      line-height: 1.35;
-    }
   </style>
 </head>
 
@@ -675,29 +390,9 @@
         </div>
       </div>
     </div>
-
-    <!-- Goals section -->
-    <div class="section">
-      <div class="section-title">
-        <h2>↗ <span id="goalsTitle">Short Term Goals</span></h2>
-        <div class="meta" id="goalsMeta">Loading goals…</div>
-      </div>
-
-      <div id="goalsBoard" class="goals-board"></div>
-      <div id="goalsError" class="error" style="display:none;"></div>
-
-      <div class="hint">
-        Edit goals in <b>goals.json</b> (repo root). Commit + push to update Notion.
-      </div>
-    </div>
   </div>
 
   <script>
-    /**
-     * =========================
-     * CONFIG — EDIT THIS
-     * =========================
-     */
     const CONFIG = {
       timezoneLabel: "America/Chicago",
 
@@ -718,17 +413,11 @@
         latitude: 29.4241,
         longitude: -98.4936,
         refreshMinutes: 15
-      },
-
-      goals: {
-        url: "./goals.json",
-        refreshMinutes: 10
       }
     };
 
     // ---------- Utilities ----------
     const pad2 = (n) => String(n).padStart(2, "0");
-    const clampPct = (p) => Math.max(0, Math.min(100, Number(p) || 0));
 
     function formatShortDate(d){
       return d.toLocaleDateString(undefined, { year:"numeric", month:"short", day:"2-digit" });
@@ -984,136 +673,6 @@
       }
     }
 
-    // ---------- Goals (goals.json) ----------
-    function renderGoals(boardData){
-      const titleEl = document.getElementById("goalsTitle");
-      const metaEl = document.getElementById("goalsMeta");
-      const boardEl = document.getElementById("goalsBoard");
-      const errEl = document.getElementById("goalsError");
-
-      errEl.style.display = "none";
-      errEl.textContent = "";
-
-      titleEl.textContent = boardData.title || "Short Term Goals";
-      boardEl.innerHTML = "";
-
-      const cols = Array.isArray(boardData.columns) ? boardData.columns : [];
-      let totalItems = 0;
-
-      cols.forEach(col => {
-        const items = Array.isArray(col.items) ? col.items : [];
-        totalItems += items.length;
-
-        const colEl = document.createElement("div");
-        colEl.className = "g-col";
-        colEl.setAttribute("data-col", col.id || "");
-
-        const head = document.createElement("div");
-        head.className = "g-colhead";
-
-        const pill = document.createElement("div");
-        pill.className = "g-pill";
-        pill.textContent = col.name || "Column";
-
-        const count = document.createElement("div");
-        count.className = "g-count";
-        count.textContent = String(items.length);
-
-        head.appendChild(pill);
-        head.appendChild(count);
-
-        const list = document.createElement("div");
-        list.className = "g-list";
-
-        items.forEach(it => {
-          const card = document.createElement("div");
-          card.className = "g-card";
-
-          const row = document.createElement("div");
-          row.className = "g-row";
-
-          const title = document.createElement("div");
-          title.className = "g-title";
-
-          const emoji = document.createElement("div");
-          emoji.className = "g-emoji";
-          emoji.textContent = it.emoji || "•";
-
-          const text = document.createElement("div");
-          text.textContent = it.title || "Untitled";
-
-          title.appendChild(emoji);
-          title.appendChild(text);
-
-          const meta = document.createElement("div");
-          meta.className = "g-meta";
-          meta.textContent = it.meta || "";
-
-          row.appendChild(title);
-          if (it.meta) row.appendChild(meta);
-
-          const progressWrap = document.createElement("div");
-          progressWrap.className = "g-progress";
-
-          const bar = document.createElement("div");
-          const pct = clampPct(it.progress);
-          bar.style.width = `${pct}%`;
-
-          progressWrap.appendChild(bar);
-
-          const foot = document.createElement("div");
-          foot.className = "g-foot";
-
-          const left = document.createElement("div");
-          left.textContent = "";
-
-          const pctEl = document.createElement("div");
-          pctEl.textContent = `${pct.toFixed(0)}%`;
-
-          foot.appendChild(left);
-          foot.appendChild(pctEl);
-
-          card.appendChild(row);
-          card.appendChild(progressWrap);
-          card.appendChild(foot);
-
-          list.appendChild(card);
-        });
-
-        colEl.appendChild(head);
-        colEl.appendChild(list);
-        boardEl.appendChild(colEl);
-      });
-
-      metaEl.textContent = `${totalItems} total`;
-    }
-
-    async function refreshGoals(){
-      const metaEl = document.getElementById("goalsMeta");
-      const errEl = document.getElementById("goalsError");
-
-      try {
-        const bust = `cb=${Date.now()}`;
-        const url = CONFIG.goals.url.includes("?")
-          ? `${CONFIG.goals.url}&${bust}`
-          : `${CONFIG.goals.url}?${bust}`;
-
-        const res = await fetch(url, { cache: "no-store" });
-        if (!res.ok) throw new Error(`goals.json fetch failed: ${res.status}`);
-        const data = await res.json();
-        renderGoals(data);
-
-        const now = new Date();
-        metaEl.textContent = `${metaEl.textContent} • updated ${now.toLocaleTimeString([], { hour:"2-digit", minute:"2-digit" })}`;
-      } catch (e) {
-        errEl.style.display = "block";
-        errEl.textContent =
-          "Could not load goals.json. Make sure goals.json is in the repo root and GitHub Pages has redeployed.\n" +
-          "Tip: open your site directly (not inside Notion) to confirm it loads first.";
-        metaEl.textContent = "Goals unavailable";
-      }
-    }
-
     // ---------- Init ----------
     document.getElementById("tzLabel").textContent = `TZ: ${CONFIG.timezoneLabel}`;
 
@@ -1131,11 +690,9 @@
 
     tick();
     refreshWeather();
-    refreshGoals();
 
     setInterval(tick, 60 * 1000);
     setInterval(refreshWeather, CONFIG.weather.refreshMinutes * 60 * 1000);
-    setInterval(refreshGoals, CONFIG.goals.refreshMinutes * 60 * 1000);
   </script>
 </body>
 </html>
